# ffcx-backends

./: .clang-format  .clang-tidy  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
docker/: Dockerfile.ubuntu
ffcx_backends/: __init__.py  cpp.py
ffcx_backends/cuda/: __init__.py  expression.py  file.py  file_template.py  form.py  form_template.py  integral.py  integral_template.py
test/: poisson.py  test_cpp.py  test_placeholder.py
test/cpp/: CMakeLists.txt  Poisson1D.hpp  find-ffcx.py  kernel.cpp  pmf.hpp  test_example.cpp
test/cuda/: main.cpp  sample_integral.cu  test_api.py  test_nvrtc.py
test/cuda/nvrtc_compiler/: CMakeLists.txt  find-nvrtc.py  main.cpp
