[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tools.setuptools]
packages = ["ffcx_backends"]

[project]
name = "ffcx_backends"
version = "0.0.0"
dependencies = [
  "fenics-basix@git+https://github.com/fenics/basix@main",
  "fenics-ffcx@git+https://github.com/fenics/ffcx@main",
]
requires-python = ">=3.10"
authors = []
maintainers = []
description = ""
readme = "README.md"
# license = ""
# license-files = ["LICEN[CS]E.*"]
# keywords = []
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.urls]
Repository = "https://github.com/schnellerhase/ffcx-backends"
"Bug Tracker" = "https://github.com/schnellerhase/ffcx-backends/issues"

[project.optional-dependencies]
lint = ["ruff", "yamllint"]
test = ["pytest", "nvidia-cuda-nvrtc-cu12"]
