[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ffcx_backends"
version = "0.0.0"
dependencies = [
  "fenics-basix@git+https://github.com/fenics/basix@main",
  "fenics-ffcx@git+https://github.com/fenics/ffcx@main",
  "fenics-ufl@git+https://github.com/fenics/ufl@main",
]
requires-python = ">=3.10"
authors = []
maintainers = []
description = ""
readme = "README.md"
# license = ""
# license-files = ["LICEN[CS]E.*"]
# keywords = []
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.urls]
Repository = "https://github.com/schnellerhase/ffcx-backends"
"Bug Tracker" = "https://github.com/schnellerhase/ffcx-backends/issues"

[project.optional-dependencies]
lint = ["clang-format", "ruff", "yamllint"]
test = ["pytest", "nvidia-cuda-nvrtc-cu12"]

[tool.setuptools]
packages = ["ffcx_backends"]

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "N",   # pep8-naming
    "E",   # pycodestyle
    "W",   # pycodestyle
    "D",   # pydocstyle
    "F",   # pyflakes
    "I",   # isort
    "RUF", # Ruff-specific rules
    "UP",  # pyupgrade
    "ICN", # flake8-import-conventions
    "NPY", # numpy-specific rules
    "FLY", # use f-string not static joins
    "LOG", # https://docs.astral.sh/ruff/rules/#flake8-logging-log
    "ISC", # https://docs.astral.sh/ruff/rules/#flake8-implicit-str-concat-isc
    "B",   # https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
    "A",   # https://docs.astral.sh/ruff/rules/#flake8-builtins-a
]
ignore = ["RUF005", "RUF012", "RUF015"]
unfixable = ["F401"] # unused-import

[tool.ruff.lint.per-file-ignores]
"test/*" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"
