[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ffcx_backends"
version = "0.0.0"
dependencies = [
  "fenics-basix@git+https://github.com/fenics/basix@main",
  "fenics-ffcx@git+https://github.com/fenics/ffcx@main",
  "fenics-ufl@git+https://github.com/fenics/ufl@main",
]
requires-python = ">=3.10"
authors = []
maintainers = []
description = ""
readme = "README.md"
license = "LGPL-3.0-only"
license-files = ["LICENSE"]
# keywords = []
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
]

[project.urls]
Repository = "https://github.com/schnellerhase/ffcx-backends"
"Bug Tracker" = "https://github.com/schnellerhase/ffcx-backends/issues"

[project.optional-dependencies]
lint = ["clang-format", "ruff", "yamllint", "mypy"]
test = ["pytest", "nvidia-cuda-nvrtc-cu12"]

[tool.setuptools]
packages = ["ffcx_backends"]

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
  "N",   # pep8-naming
  "E",   # pycodestyle
  "W",   # pycodestyle
  "D",   # pydocstyle
  "F",   # pyflakes
  "I",   # isort
  "RUF", # Ruff-specific rules
  "UP",  # pyupgrade
  "ICN", # flake8-import-conventions
  "NPY", # numpy-specific rules
  "FLY", # use f-string not static joins
  "LOG", # flake8-logging
  "ISC", # flake8-implicit-str-concat
  "B",   # flake8-bugbear
  "A",   # flake8-builtins
]
ignore = [
  "RUF005", # collection-literal-concatenation
  "RUF012", # mutable-class-default
  "RUF015", # unnecessary-iterable-allocation-for-first-element
  "D101",   # undocumented-public-class
  "N801",   # invalid-class-name
]
unfixable = ["F401"] # unused-import

[tool.ruff.lint.per-file-ignores]
"test/*" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
disallow_untyped_defs = false
disallow_any_unimported = false
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_unreachable = true
